# LWGLGF

./: .gitignore  .gitmodules  CMakeLists.txt  README.md  premake5.lua
assets/: config.lua
cmake/: FindGLM.cmake
shaders/: frag_shader.glsl  simple_vert_shader.glsl  vert_shader.glsl
src/: CMakeLists.txt  Camera.cpp  Camera.h  Game.cpp  Game.h  GameEntity.cpp  GameEntity.h  GameObject.cpp  GameObject.h  Light.cpp  Light.h  Material.cpp  Material.h  Mesh.cpp  Mesh.h  ResourceManager.cpp  ResourceManager.h  Shader.cpp  Shader.h  Transform.cpp  Transform.h  Vertex.h
